(PC-12236)[PRO]: ui-kit => add fieldset layouts for radio and checkbox group and fix spacings

--- a/pro/src/ui-kit/form/RadioGroup/RadioGroup.module.scss
+++ b/pro/src/ui-kit/form/RadioGroup/RadioGroup.module.scss
@@ -1,4 +1,4 @@
-.checkbox-group {
+.radio-group {
   &-item {
     margin-bottom: rem(8px);
   }
